--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+
+############################################################
+# some custom setting
+*.off
+*.jpg
+/Release/*
+
